--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -1,19 +1,28 @@
 // Blog Design Colour Scheme: #1
 
-$background-main: black;
-$background-secondary: black;
-$background-pagination: yellow;
-$background-blog-entry: #ffff57;
-$background-code-snippet: none;
+
+$background-header: black;
+$background-footer: $background-header;
+
 $background-post-entry: #f5c7a6;
+$background-post-entries: yellow;
+$background-category-list: #f2f7c4;
+
+$bg-search-input: wheat;
+$bg-search-btn: wheat;
+$bg-searchwidget-input: #ffff8e;
+$bg-searchwidget-btn: #ffff8e;
+
+$background-body: lightblue;
+$background-widget: #f7f7ab;
 $background-page: #f5c7a6;
-$background-single: #f5c7a6;
 
 $font-main: "Quicksand";
 
 $color-main: lightblue;
 $color-secondary: white;
 $color-nav: gold;
+$color-required: red;
 
 // link colours
 $color-href: red;
@@ -26,9 +35,17 @@ $color-href-three: #3a3a05;
 $color-href-three-hvr: #bd330a;
 
 // main pagininaton link colours
-$color-pagination: blue;
 $color-pagination-href: red;
 $color-pagination-href-hvr: green;
+
+
+// fonts
+
+$font-main: "Quicksand";
+
+$font-size-lg: 32px;
+$font-size-md: 16px;
+$font-size-sm: 12px;
 
 // breakpoints
 $breakpoint-sm: 780px;
