--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -42,7 +42,7 @@
     
     &:hover {
         
-       background: lighten( #f7f7ab, 16% );
+       background: lighten( #f7f7ab, 6% );
     }
     
 }
@@ -50,7 +50,7 @@
 %comment_btn {    
                         
     padding: 8px;
-    background: yellow;
+    background: $background-widget;
     margin: 10pt 0;
     cursor: pointer;
     transition: background .3s;
@@ -59,7 +59,7 @@
     
     &:hover {
         
-       background: lighten( yellow, 16% );
+       background: lighten( $background-widget, 6% );
     }
 }
 
@@ -95,13 +95,6 @@
         
     }
     
-    // ????
-    .posts-toggling {
-        
-        text-align: center;
-        margin: 5px auto;
-        
-    }
   
     // page.php formatting selectors
     h1,
@@ -152,9 +145,9 @@
 
     ul, ol {
 
-        padding-top: 20pt;
         width: 90%;
         margin: 0 auto;
+        padding: 10pt 0;
         color: brown;
 
         li {
@@ -169,10 +162,11 @@
 
     }
 
+    // empty
     ol {
 
     }
-
+    
     p {
 
         line-height: 1.7;  
@@ -196,27 +190,22 @@
     /* setting inline-code */
     code {
         
-        color: #444444;
-        
+        color: #444444;      
     }
     
     sub {
         
-        color: #444444;
-        
+        color: #444444;      
     }
     
     sup {
         
-        color: #444444;
-        
+        color: #444444;      
     }
     
     .kdb {
         
         color: #444444;
-        
-        
     }
     
     .has-text-align-center {
@@ -234,6 +223,7 @@
         text-align: right;
     }
 
+    // image block
     .wp-block-image {
         
         display: block;
@@ -247,11 +237,8 @@
         
         figure {
             
-            text-align: center;
-            
-        }
-        
-        
+            text-align: center;            
+        }        
         
         &.alignleft {
             
@@ -276,18 +263,15 @@
             width: 430px;
             display: block;
             margin: 10px auto;
+            border: solid gold 3px;
             
             @media (max-width: $breakpoint-sm) {
                 
                 width: 90%;
             }
-        }
-        
-        // style - post formatting - wp-block-image        
-        
-        div {
             
-        }
+        }        
+        
     }
     
     .wp-block-media-text {
@@ -360,10 +344,21 @@
         }
     }
     
+    .wp-caption {
+        
+        width: 90%;
+        display: block;
+        margin: 10pt auto;
+        
+    }
+    
     // Highlighting Code Block - WP Block
     .hcb_wrap {
-        
+                
         border: black solid 2px;
+        width: 40%;
+        display: block;
+        margin: 20px auto;
         
         .hcb-clipboard {
             
@@ -397,8 +392,7 @@
             }
         }        
         
-    }
-    
+    }   
     
     // inline-block    
     :where(img[class*=wp-image-]) {
@@ -451,6 +445,9 @@
         .hcb_wrap {
         
             border: black solid 2px;
+            width: 90%;
+            display: block;
+            margin: 20px auto;
 
             .hcb-clipboard {
 
@@ -546,48 +543,78 @@
 // Search Fields
 %search_btn {
     
-    background: wheat;
+    background: $bg-search-btn;
     width: auto;
     border: solid 3px black;
-    padding: 4px;  
-    transition: background 0.3s; 
+    padding: 5px;  
+    transition: background .3s; 
     cursor: pointer;
+    font-size: 14pt;
+    font-family: "Quicksand";
     border-radius: 5px;
     
     &:hover {
         
-        background: lightyellow;
-    } 
+        background: lighten($bg-search-btn, 10%);
+    }
+    
+    &:focus {
+        
+        border: solid gold 3px;
+    }
+    
 }
 
 %search_btn_widget {
     
-    background: yellow;
+    border: solid 3px black ;
+    background: $bg-searchwidget-input;
     padding: 3px;
     border-radius: 5px;
-    cursor: pointer;    
+    font-size: 14pt;
+    font-family: $font-main;
+    font-weight: bold; 
     width: 56px;
-    border: solid black 3px;
+    transition: background .3s;
+    cursor: pointer;   
     
     &:hover {
         
-        background: lightyellow;
+        background: #ffff00;
     } 
+    
+    &::placeholder {
+        
+        color: gray;
+        font-family: $font-main;
+    }
+    
+    &:focus {
+        
+        border: gold 3px solid;
+    }
 }
 
 %search_input {    
     
     padding: 6px;
     border-radius: 5px;
-    transition: background 0.3s;
+    transition: background .3s;
     border: solid 3px black;
-    font-size: 12px;
-    background: wheat;    
+    font-size: 14pt;
+    font-family: "Quicksand";
+    background: $bg-search-input;    
     
     &:hover {
         
-        background: lightyellow;
+        background: lighten($bg-search-input, 10%);
     }
+    
+    &:focus {
+        
+        border: solid gold 3px;
+    }
+    
 }
 
 %search_input_widget {
@@ -596,12 +623,23 @@
     padding: 10px;
     border-radius: 5px;
     font-size: 14pt;
+    font-family: $font-main;
     transition: background .3s;
-    background: yellow;
-    border: solid 3px black;
+    background: $bg-searchwidget-input; 
                         
     &:hover {
 
-        background: lightyellow;
+        background: #ffff00;
+    }
+    
+    &::placeholder {
+        
+        color: gray;
+        font-family: $font-main;
+    }
+    
+    &:focus {
+        
+        border: gold 3px solid;
     }
 }
