--- a/_assets/sass/inc/footer.scss
+++ b/_assets/sass/inc/footer.scss
@@ -1,7 +1,7 @@
 footer {
     
     width: 100%;
-    background: $background-secondary;
+    background: $background-footer;
     
     p {
         
