--- a/_assets/sass/inc/header.scss
+++ b/_assets/sass/inc/header.scss
@@ -1,6 +1,6 @@
 header {
     
-    background: $background-secondary;
+    background: $background-header;
     height: 80px;
     border-bottom: solid 4px gold;
     
