--- a/_assets/sass/single.scss
+++ b/_assets/sass/single.scss
@@ -74,12 +74,12 @@
             
             .comment-form {
                 
-                border: solid 1px red;
+                /* border: solid 1px red; */
                 
                 .logged-in-as {
                     
                     font-weight: bold;
-                    font-size: 12pt;
+                    font-size: 12px;
                     
                     a {
                         
@@ -99,7 +99,7 @@
                 
                 .comment-form-comment {
                     
-                    border: solid red 1px;
+                    /* border: solid red 1px; */
                     margin-top: 10px;
                     
                     label {
