--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -43,7 +43,8 @@ $color-pagination-href-hvr: green;
 
 $font-main: "Quicksand";
 
-$font-size-lg: 32px;
+$font-size-xl: 32px;
+$font-size-lg: 18px;
 $font-size-md: 16px;
 $font-size-sm: 12px;
 
