--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -7,6 +7,8 @@ $background-footer: $background-header;
 $background-post-entry: #f5c7a6;
 $background-post-entries: yellow;
 $background-category-list: #f2f7c4;
+$background-comment-entries: #ade8f1;
+$background-comment-field: #f7f7ab;
 
 $bg-search-input: wheat;
 $bg-search-btn: wheat;
