--- a/_assets/sass/single.scss
+++ b/_assets/sass/single.scss
@@ -183,7 +183,7 @@
                         
                         font-size: 12pt;
                         margin: 10px 0;
-                        background: #ade8f1;
+                        background: $background-comment-entries;
                         padding: 5px;
                         border-radius: 10px;
                         
