text align and span - date archives

--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -4,8 +4,8 @@
     text-align: center;
     padding: 5px;
     background: gray;
-    color: white;
-    font-size: small;
+    color: $color-secondary;
+    font-size: 13px;
     font-weight: bold;
     letter-spacing: 2px;
 }
